test_suite/ui/must_use_warning.stderr
warning: unused import: `BitFlags`
 --> $DIR/must_use_warning.rs:1:28
  |
1 | use enumflags2::{bitflags, BitFlags};
  |                            ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `union` found for enum `Flag` in the current scope
  --> $DIR/must_use_warning.rs:13:11
   |
6  | enum Flag {
   | --------- method `union` not found for this
...
13 |     thing.union(Flag::Bar.into());
   |           ^^^^^ method not found in `Flag`
